[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=1]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=2]
[ext_resource path="res://scenes/editor/assets/tick_box_hover.png" type="Texture" id=3]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=5]
[ext_resource path="res://scenes/editor/property_type_scenes/Path/PathTool.gd" type="Script" id=6]
[ext_resource path="res://scenes/actors/objects/touch_lift/circle.png" type="Texture" id=7]
[ext_resource path="res://scenes/editor/assets/tick_box.png" type="Texture" id=8]

[node name="PathToolController" type="Control"]
margin_left = -17.0
margin_top = 74.0
margin_right = 767.0
margin_bottom = 525.0
mouse_filter = 2
script = ExtResource( 6 )
close_button = NodePath("CloseButton")

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 293.999
margin_top = 14.977
margin_right = 448.999
margin_bottom = 95.977
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ConfirmButton" type="TextureButton" parent="."]
margin_left = 437.0
margin_top = 15.0
margin_right = 704.0
margin_bottom = 222.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="HoverSound" type="AudioStreamPlayer" parent="ConfirmButton"]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="ConfirmButton"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[connection signal="pressed" from="CloseButton" to="." method="close_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_confirm_pressed"]
